--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "chevere/reponame",
-    "description": "A chevere reponame package",
+    "name": "chevere/iterator",
+    "description": "A chevere iterator package",
     "homepage": "https://chevere.org",
     "type": "library",
     "license": "Apache-2.0",
@@ -12,7 +12,8 @@
         }
     ],
     "require": {
-        "chevere/chevere": "^3.0"
+        "php": "^8.1",
+        "chevere/message": "^0.1.0"
     },
     "require-dev": {
         "phpstan/phpstan": "^1.9",
@@ -20,11 +21,8 @@
         "symplify/easy-coding-standard": "^11.1"
     },
     "autoload": {
-        "files": [
-            "src/functions.php"
-        ],
         "psr-4": {
-            "Chevere\\%namespace%\\": "src/"
+            "Chevere\\Iterator\\": "src/"
         }
     },
     "autoload-dev": {
